tried part 4
