# storage/openapi.yaml
@@ -42,6 +42,14 @@ paths:
             type: string
             format: date-time
             example: 2016-08-29T09:12:33.001Z
+
+        - name: end_timestamp 
+          in: query
+          description: Limits the number of items on a page
+          schema: 
+            type: string
+            format: date-time
+            example: 2016-08-29T09:12:33.001Z
       responses:
         '200':
           description: Successfully returned a ph level events
@@ -89,6 +97,14 @@ paths:
           in: query
           description: Limits the number of items on a page
           schema:
+            type: string
+            format: date-time
+            example: 2016-08-29T09:12:33.001Z
+            
+        - name: end_timestamp 
+          in: query
+          description: Limits the number of items on a page
+          schema: 
             type: string
             format: date-time
             example: 2016-08-29T09:12:33.001Z
